--- a/css/about.css
+++ b/css/about.css
@@ -97,8 +97,6 @@ img.cityscape {
 }
 
 .top-content {
-    display: flex;
-    flex-wrap: wrap;
     padding-left: 30px;
     padding-bottom: 20px;
     border-bottom: 1px dashed black;
@@ -115,9 +113,13 @@ img.cityscape {
     margin-bottom: 20px;
 }
 
+.middle-content img{
+    padding-bottom: 10px;
+}
+
 div.middle-content-detail {
     width: 370px;
-    height: 400px;
+    height: 420px;
     border-bottom: 1px dashed black;
 }
 
@@ -127,7 +129,7 @@ button {
 	border: 2px solid black;
 	width: 125px;
     height: 35px;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .bottom-content {
@@ -135,7 +137,6 @@ button {
     flex-wrap: wrap;
     padding-left: 30px;
     padding-bottom: 40px;
-    padding-top: 0px;
 }
 
 footer {
